--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Hello Adonis</title>
+  <title>Movie Corn</title>
   {{ style('style') }}
 </head>
-<body>
-  <section>
-    <div class="logo"></div>
-    <div class="title"></div>
-    <div class="subtitle">
-      <p>AdonisJs simplicity will make you feel confident about your code</p>
+<body>  
+    <div class="logo"></div><div class="subtitle"><h3>MovieCorn</h3></div>
+      <div class="subtitle">
+      <p>Categories</p>
+      <h1>{{ request.genreList }}</h1>
+      @each(route in routes)
+      <p>routes</p>
+      @endeach
       <p>
         Don't know where to start? Read the <a href="https://adonisjs.com/docs">documentation</a>.
       </p>
     </div>
-  </section>
 </body>
 </html>
