--- a/public/style.css
+++ b/public/style.css
@@ -137,3 +137,12 @@ div.desc {
   display: table;
   clear: both;
 }
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: white;
+   text-align: center;
+}
