--- a/resources/views/movie.edge
+++ b/resources/views/movie.edge
@@ -23,7 +23,7 @@
       </div>
       <br />
       @endif
-      @if(movieList.length === 0)
+      @if(movieList.length == 0)
       <p>Sorry, No Movies Available</p>
       @else
       @each(list in movieList.movies)
